# Roll-Write-Foundry

./: .eslintrc.cjs  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/scripts/: tauri-with-pkgconfig.mjs
apps/desktop/src/: App.css  App.test.tsx  App.tsx
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/icons/: README.md
apps/desktop/src-tauri/pkgconfig/: javascriptcoregtk-4.0.pc  webkit2gtk-4.0.pc  webkit2gtk-web-extension-4.0.pc
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/session/: simulation.ts
apps/desktop/src/utils/: events.ts  scoring.ts
docs/: README.md
e2e/: package.json  playwright.config.ts
e2e/fixtures/: invalid-template.json
e2e/tests/: editor.spec.ts  play.spec.ts  smoke.spec.ts
