[package]
name = "rwf-desktop"
version = "0.0.0"
edition = "2021"
authors = ["Roll & Write Foundry"]
description = "Roll & Write Foundry desktop shell"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = [] }

[build-dependencies]
base64 = "0.21"
tauri-build = { version = "1", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
debug = false

[package.metadata.bundle]
identifier = "com.rollwritefoundry.desktop"
